# divine-agi-v16

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  railway.toml
src/: api.rs  auth.rs  cli.rs  consensus.rs  crypto.rs  database.rs  exchange.rs  genome.rs  lib.rs  main.rs  multi_chain.rs  rotation.rs  rotation_daemon.rs  ttrl.rs  wallet.rs
src/kernel/: mod.rs
