[package]
name = "divine-agi"
version = "16.0.0"
edition = "2021"
description = "Divine AGI V16 (Kernel V4) - Proof of Consciousness - Railway Compatible"
license = "MIT"

[[bin]]
name = "divine-agi"
path = "src/main.rs"

[dependencies]
# CRITICAL: Pin home to avoid edition2024 error on Railway
home = "=0.5.9"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "rt-multi-thread"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }

# Big numbers
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# gRPC for LND (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

[features]
default = []
full-ln = ["tonic", "prost"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
